--- a/traffic_lights.ipynb
+++ b/traffic_lights.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "aa91ced3",
+   "id": "c123b7cd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "4ba5d582",
+   "id": "07765177",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "65744295",
+   "id": "bc298566",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "6adba499",
+   "id": "4ff9521a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "bdf0c603",
+   "id": "2d86e966",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b26586d",
+   "id": "60ca68bc",
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,32 @@
       "Caution! The light is Amber\n",
       "STOP! The light is Red\n",
       "Go! The light is Green\n",
-      "Caution! The light is Amber\n"
+      "Caution! The light is Amber\n",
+      "STOP! The light is Red\n",
+      "Go! The light is Green\n",
+      "Caution! The light is Amber\n",
+      "STOP! The light is Red\n",
+      "Go! The light is Green\n",
+      "Caution! The light is Amber\n",
+      "STOP! The light is Red\n",
+      "Go! The light is Green\n",
+      "Caution! The light is Amber\n",
+      "STOP! The light is Red\n",
+      "Go! The light is Green\n",
+      "Caution! The light is Amber\n",
+      "STOP! The light is Red\n",
+      "Go! The light is Green\n",
+      "Caution! The light is Amber\n",
+      "STOP! The light is Red\n",
+      "Go! The light is Green\n",
+      "Caution! The light is Amber\n",
+      "STOP! The light is Red\n",
+      "Go! The light is Green\n",
+      "Caution! The light is Amber\n",
+      "STOP! The light is Red\n",
+      "Go! The light is Green\n",
+      "Caution! The light is Amber\n",
+      "STOP! The light is Red\n"
      ]
     }
    ],
@@ -121,7 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "157895db",
+   "id": "df29e2ce",
    "metadata": {},
    "outputs": [],
    "source": []
