--- a/traffic_lights.ipynb
+++ b/traffic_lights.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "c123b7cd",
+   "id": "89c7e4e7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "07765177",
+   "id": "91f504f3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "bc298566",
+   "id": "865c9259",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "4ff9521a",
+   "id": "6932ff50",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "2d86e966",
+   "id": "d44928f0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60ca68bc",
+   "id": "dd84c841",
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,206 @@
       "STOP! The light is Red\n",
       "Go! The light is Green\n",
       "Caution! The light is Amber\n",
-      "STOP! The light is Red\n"
+      "STOP! The light is Red\n",
+      "Go! The light is Green\n",
+      "Caution! The light is Amber\n",
+      "STOP! The light is Red\n",
+      "Go! The light is Green\n",
+      "Caution! The light is Amber\n",
+      "STOP! The light is Red\n",
+      "Go! The light is Green\n",
+      "Caution! The light is Amber\n",
+      "STOP! The light is Red\n",
+      "Go! The light is Green\n",
+      "Caution! The light is Amber\n",
+      "STOP! The light is Red\n",
+      "Go! The light is Green\n",
+      "Caution! The light is Amber\n",
+      "STOP! The light is Red\n",
+      "Go! The light is Green\n",
+      "Caution! The light is Amber\n",
+      "STOP! The light is Red\n",
+      "Go! The light is Green\n",
+      "Caution! The light is Amber\n",
+      "STOP! The light is Red\n",
+      "Go! The light is Green\n",
+      "Caution! The light is Amber\n",
+      "STOP! The light is Red\n",
+      "Go! The light is Green\n",
+      "Caution! The light is Amber\n",
+      "STOP! The light is Red\n",
+      "Go! The light is Green\n",
+      "Caution! The light is Amber\n",
+      "STOP! The light is Red\n",
+      "Go! The light is Green\n",
+      "Caution! The light is Amber\n",
+      "STOP! The light is Red\n",
+      "Go! The light is Green\n",
+      "Caution! The light is Amber\n",
+      "STOP! The light is Red\n",
+      "Go! The light is Green\n",
+      "Caution! The light is Amber\n",
+      "STOP! The light is Red\n",
+      "Go! The light is Green\n",
+      "Caution! The light is Amber\n",
+      "STOP! The light is Red\n",
+      "Go! The light is Green\n",
+      "Caution! The light is Amber\n",
+      "STOP! The light is Red\n",
+      "Go! The light is Green\n",
+      "Caution! The light is Amber\n",
+      "STOP! The light is Red\n",
+      "Go! The light is Green\n",
+      "Caution! The light is Amber\n",
+      "STOP! The light is Red\n",
+      "Go! The light is Green\n",
+      "Caution! The light is Amber\n",
+      "STOP! The light is Red\n",
+      "Go! The light is Green\n",
+      "Caution! The light is Amber\n",
+      "STOP! The light is Red\n",
+      "Go! The light is Green\n",
+      "Caution! The light is Amber\n",
+      "STOP! The light is Red\n",
+      "Go! The light is Green\n",
+      "Caution! The light is Amber\n",
+      "STOP! The light is Red\n",
+      "Go! The light is Green\n",
+      "Caution! The light is Amber\n",
+      "STOP! The light is Red\n",
+      "Go! The light is Green\n",
+      "Caution! The light is Amber\n",
+      "STOP! The light is Red\n",
+      "Go! The light is Green\n",
+      "Caution! The light is Amber\n",
+      "STOP! The light is Red\n",
+      "Go! The light is Green\n",
+      "Caution! The light is Amber\n",
+      "STOP! The light is Red\n",
+      "Go! The light is Green\n",
+      "Caution! The light is Amber\n",
+      "STOP! The light is Red\n",
+      "Go! The light is Green\n",
+      "Caution! The light is Amber\n",
+      "STOP! The light is Red\n",
+      "Go! The light is Green\n",
+      "Caution! The light is Amber\n",
+      "STOP! The light is Red\n",
+      "Go! The light is Green\n",
+      "Caution! The light is Amber\n",
+      "STOP! The light is Red\n",
+      "Go! The light is Green\n",
+      "Caution! The light is Amber\n",
+      "STOP! The light is Red\n",
+      "Go! The light is Green\n",
+      "Caution! The light is Amber\n",
+      "STOP! The light is Red\n",
+      "Go! The light is Green\n",
+      "Caution! The light is Amber\n",
+      "STOP! The light is Red\n",
+      "Go! The light is Green\n",
+      "Caution! The light is Amber\n",
+      "STOP! The light is Red\n",
+      "Go! The light is Green\n",
+      "Caution! The light is Amber\n",
+      "STOP! The light is Red\n",
+      "Go! The light is Green\n",
+      "Caution! The light is Amber\n",
+      "STOP! The light is Red\n",
+      "Go! The light is Green\n",
+      "Caution! The light is Amber\n",
+      "STOP! The light is Red\n",
+      "Go! The light is Green\n",
+      "Caution! The light is Amber\n",
+      "STOP! The light is Red\n",
+      "Go! The light is Green\n",
+      "Caution! The light is Amber\n",
+      "STOP! The light is Red\n",
+      "Go! The light is Green\n",
+      "Caution! The light is Amber\n",
+      "STOP! The light is Red\n",
+      "Go! The light is Green\n",
+      "Caution! The light is Amber\n",
+      "STOP! The light is Red\n",
+      "Go! The light is Green\n",
+      "Caution! The light is Amber\n",
+      "STOP! The light is Red\n",
+      "Go! The light is Green\n",
+      "Caution! The light is Amber\n",
+      "STOP! The light is Red\n",
+      "Go! The light is Green\n",
+      "Caution! The light is Amber\n",
+      "STOP! The light is Red\n",
+      "Go! The light is Green\n",
+      "Caution! The light is Amber\n",
+      "STOP! The light is Red\n",
+      "Go! The light is Green\n",
+      "Caution! The light is Amber\n",
+      "STOP! The light is Red\n",
+      "Go! The light is Green\n",
+      "Caution! The light is Amber\n",
+      "STOP! The light is Red\n",
+      "Go! The light is Green\n",
+      "Caution! The light is Amber\n",
+      "STOP! The light is Red\n",
+      "Go! The light is Green\n",
+      "Caution! The light is Amber\n",
+      "STOP! The light is Red\n",
+      "Go! The light is Green\n",
+      "Caution! The light is Amber\n",
+      "STOP! The light is Red\n",
+      "Go! The light is Green\n",
+      "Caution! The light is Amber\n",
+      "STOP! The light is Red\n",
+      "Go! The light is Green\n",
+      "Caution! The light is Amber\n",
+      "STOP! The light is Red\n",
+      "Go! The light is Green\n",
+      "Caution! The light is Amber\n",
+      "STOP! The light is Red\n",
+      "Go! The light is Green\n",
+      "Caution! The light is Amber\n",
+      "STOP! The light is Red\n",
+      "Go! The light is Green\n",
+      "Caution! The light is Amber\n",
+      "STOP! The light is Red\n",
+      "Go! The light is Green\n",
+      "Caution! The light is Amber\n",
+      "STOP! The light is Red\n",
+      "Go! The light is Green\n",
+      "Caution! The light is Amber\n",
+      "STOP! The light is Red\n",
+      "Go! The light is Green\n",
+      "Caution! The light is Amber\n",
+      "STOP! The light is Red\n",
+      "Go! The light is Green\n",
+      "Caution! The light is Amber\n",
+      "STOP! The light is Red\n",
+      "Go! The light is Green\n",
+      "Caution! The light is Amber\n",
+      "STOP! The light is Red\n",
+      "Go! The light is Green\n",
+      "Caution! The light is Amber\n",
+      "STOP! The light is Red\n",
+      "Go! The light is Green\n",
+      "Caution! The light is Amber\n",
+      "STOP! The light is Red\n",
+      "Go! The light is Green\n",
+      "Caution! The light is Amber\n",
+      "STOP! The light is Red\n",
+      "Go! The light is Green\n",
+      "Caution! The light is Amber\n",
+      "STOP! The light is Red\n",
+      "Go! The light is Green\n",
+      "Caution! The light is Amber\n",
+      "STOP! The light is Red\n",
+      "Go! The light is Green\n",
+      "Caution! The light is Amber\n",
+      "STOP! The light is Red\n",
+      "Go! The light is Green\n",
+      "Caution! The light is Amber\n",
+      "STOP! The light is Red\n",
+      "Go! The light is Green\n"
      ]
     }
    ],
@@ -146,7 +345,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "df29e2ce",
+   "id": "32e7a254",
    "metadata": {},
    "outputs": [],
    "source": []
